# python-poetry-direnv-nix

./: pyproject.toml  shell.nix
nix/: default.nix  nixpkgs.json  nixpkgs.nix  overlay.nix
